# Stellara_Contracts

.github/workflows/: dr-drill.yml
Backend/: docker-compose.yml  package-lock.json  package.json
Backend/prisma/: schema.prisma
Backend/src/: app.module.ts
Backend/src/redis/: redis.module.ts
Backend/src/tenancy/middleware/: tenant-context.middleware.ts
Contracts/: Cargo.toml  STORAGE_OPTIMIZATION.md
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/academy-rewards/tests/: edge_cases.rs  fuzzing.rs  integration.rs  property_based.rs
Contracts/contracts/academy/src/: lib.rs  storage.rs  vesting.rs
Contracts/contracts/academy/tests/: edge_cases.rs  fuzzing.rs  integration.rs  mod.rs  property_based.rs
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/social_rewards/src/: lib.rs  storage.rs
Contracts/contracts/social_rewards/tests/: edge_cases.rs  fuzzing.rs  integration.rs  mod.rs  property_based.rs
Contracts/contracts/token/: Cargo.toml  README_TESTING.md  justfile
Contracts/contracts/token/src/: lib.rs
Contracts/contracts/token/tests/: comprehensive.rs  edge_cases.rs  fuzzing.rs  integration.rs  mod.rs  property_based.rs
Contracts/contracts/trading/: Cargo.toml
Contracts/contracts/trading/src/: lib.rs  storage.rs  test.rs
Contracts/contracts/trading/tests/: edge_cases.rs  fuzzing.rs  integration.rs  property_based.rs
Contracts/shared/: Cargo.toml
Contracts/shared/src/: lib.rs  state_verification.rs
Contracts/shared/tests/: invariants.rs
Frontend/src/app/: page.tsx
Frontend/src/components/About/: AboutSection.tsx
indexer/: types.ts
