[workspace]
members = [
    "contracts/token",
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/academy",
    "contracts/academy-rewards",
    "shared",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "25.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
