[package]
name = "academy-rewards"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, default-features = false }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"], default-features = false }
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

