[package]
name = "academy-vesting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, default-features = false }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"], default-features = false }
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true
