[package]
name = "social_rewards"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../../shared" }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4.0"
arbitrary = { version = "1.3.2", features = ["derive"] }
