[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4.0"
arbitrary = { version = "1.3.2", features = ["derive"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
cargo-llvm-cov = "0.6"

[features]
default = ["testutils"]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true
